add flow hive jei category and recipes